@@ -9,11 +9,16 @@
 * Added rcov task and updated unit testing for better code coverage.
 * Fixed some bugs where the application object was going to the global
   appliation instead of using its own data.
-* Added square and curly bracket patterns to FileList#include (Tilman Sauerbeck).
-* Added plain filename support to rule dependents (suggested by Nobu Nakada).
+* Added square and curly bracket patterns to FileList#include (Tilman
+  Sauerbeck). 
+* Added plain filename support to rule dependents (suggested by Nobu
+  Nakada). 
 * Added pathmap support to rule dependents.
 * Added a 'tasks' method to a namespace to get a list of tasks
   associated with the namespace.
+* Fixed the method name leak from FileUtils (bug found by Glenn
+  Vanderburg). 
+* Added rake_extension to handle detection of extension collisions.
 
 == Version 0.7.1
 
